Feature-products & divisions

--- a/src/layouts/Aside/style.css
+++ b/src/layouts/Aside/style.css
@@ -1,9 +1,9 @@
-sidebar{
+aside{
     width: 25%;
     text-align: center;
     background: #1abc3d;
     color: white;
     font-size: 40px;
-    height:10em;
-    display: inline-block;
-}
+    display: inline-flex;
+   
+    }
