--- a/src/layouts/Footer/style.css
+++ b/src/layouts/Footer/style.css
@@ -7,6 +7,7 @@ footer {
     left: 0px;
     width:100%;
     height:60px;
-    display: inline-block   
+    display: inline-block;
+    position:fixed;   
     
 }
