--- a/src/layouts/Header/style.css
+++ b/src/layouts/Header/style.css
@@ -1,5 +1,5 @@
-header {
-        padding: 40px;
+.header {
+        padding: 20px;
         text-align: center;
         background: #1abc9c;
         color: white;
@@ -8,8 +8,13 @@ header {
     }
   
 .header_content {
+    padding: 10px;
     font-size: 15px;
-    text-align: center;
+    text-align: right;
+    background: #1abc9c;
+    color: white;
+    font-size: 15px;
+    background-size: auto;
   } 
 
 .app {
